# routes/favouriteBoardingRoutes.js
@@ -1,11 +1,15 @@
 import express from "express";
 
-import {createFavouriteBoarding, deleteFavouriteBoarding, getAllFavouriteBoardings, getOneFavouriteBoarding} from "../controllers/favouriteBoardingController.js";
+import {
+    createFavouriteBoarding,
+    deleteFavouriteBoarding,
+    getFavouriteBoardings
+} from "../controllers/favouriteBoardingController.js";
 
 const router = express.Router();
 
 router.route('/createFavourite').post(createFavouriteBoarding);
-router.route('/getAllFavourite').get(getAllFavouriteBoardings);
+router.route('/getAllFavourite').get(getFavouriteBoardings);
 router.route('/deleteFavourite/:id').delete(deleteFavouriteBoarding)
 
 export default router;
